highscore page setup

--- a/highscores.html
+++ b/highscores.html
@@ -16,10 +16,10 @@
         <ol class="score-list"></ol>
     </div>
     <div>
-        <a class="submit-button" type="button" href="./index.html">Go Back</a>
-        <button class="submit-button">Clear Scores</button>
+        <a class="submit-button" id="back-button" type="button" href="./index.html">Go Back</a>
+        <button class="submit-button" id="clear-button">Clear Scores</button>
     </div>
 </div>
-    <!-- ,<script src="./script.js"></script> -->
+    <script src="./scores.js"></script>
 </body>
 </html>
